# hk-mahjong

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: rules.md  scoring_table.md
src/hk_mahjong/: __init__.py  __main__.py  main.py
src/hk_mahjong/ai/: basic_ai.py  evaluator.py  strategy.py
src/hk_mahjong/core/: game_state.py  hand.py  meld.py  player.py  rules.py  scoring.py  tiles.py  wall.py  win_check.py
src/hk_mahjong/ui/: app.py  ascii_renderer.py  board.py  colors.py  prompt.py  renderer.py  unicode_renderer.py
tests/ai/: test_basic_ai.py
tests/core/: test_game_state.py  test_hand.py  test_meld.py  test_scoring.py  test_tiles.py  test_wall.py  test_win_check.py
