[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hk-mahjong"
version = "0.1.0"
description = "Hong Kong style mahjong in the terminal — play against 3 AI opponents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aidan", email = "aidanslav@users.noreply.github.com" },
]
keywords = ["mahjong", "hong-kong", "terminal", "game", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/aidancorrell/hk-mahjong"
Repository = "https://github.com/aidancorrell/hk-mahjong"
Issues = "https://github.com/aidancorrell/hk-mahjong/issues"

[project.scripts]
hk-mahjong = "hk_mahjong.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hk_mahjong"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["hk_mahjong"]
mypy_path = "src"

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
